--- a/gestiondestock/src/main/resources/application.yml
+++ b/gestiondestock/src/main/resources/application.yml
@@ -1,8 +1,10 @@
 ##spring.application.name=API Gestion de stock
 
 spring:
+  application:
+    name: API Gestion de stock
   datasource:
-    url: jdbc:mysql://localhost:3306/gestionstock?createDatabaseIfNotExist=true
+    url: jdbc:mysql://localhost:8889/gestionstock?createDatabaseIfNotExist=true
     username: root
     password:
     driver-class-name: com.mysql.cj.jdbc.Driver
